...
    <string name="schedule">schedule</string>
    <string name="user">user</string>
    <string name="notification">notification</string>
    <string name="big_owl">Big Owl</string>
    <string name="search_user">Search User</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="group_supervisor">Group Supervisor</string>
    <string name="end_time">End Time</string>
    <string name="you_last">You last</string>
    <string name="this_schedule_on">this schedule on</string>
    <string name="schedule_list">Schedules</string>
    <string name="schedule_title">Schedules title</string>
    <string name="schedule_start_time">Schedules Start time</string>
    <string name="inspect">inspect</string>
    <string name="general_location_justification">
        Location detection is required to check whether you have arrived to a scheduled location.\n\n
        If not provided, the system will assume you have not arrived to the location.
...
    <string name="description_bigowl_logo">BigOwl Logo</string>
    <string name="biometric_not_supported">Biometric Not Supported on this phone</string>
    <string name="not_allowed_error">NOT ALLOWED</string>
    <string name="failed_auth">Failed authentication</string>
    <string name="auth_result_error">Error</string>
    <string name="location">Location</string>
    <string name="send_request">Send request</string>
    <string name="cancel_request">Cancel request</string>
    <string name="cant_send">Can not send</string>
    <string name="send_new_request">Send new request</string>
    <string name="can_cancel">Your request is pending. You can cancel it</string>
    <string name="no_request">You presently have NO request to supervise this user</string>
    <string name="no_self_request">This contact matches you as a contact. You can\'t send a request to yourself</string>
    <string name="supervising_already">You already have an accepted request to supervise this user</string>
    <string name="request_rejected">Your last request was rejected by this user. You can send a new request</string>
</resources>
