...
        layout="@layout/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <Button
        android:id="@+id/sup_request"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="450dp"
        android:background="@drawable/rounded_button_reddish"
        android:text="Send a request to supervise this user"
...
