...
        android:id="@+id/top_app_bar"
        layout="@layout/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
...
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="30dp"
                        android:gravity="center">

                        <Button
                            android:id="@+id/btn_supervised_group"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/rounded_button_greenish"
                            android:text="@string/supervising_me"
                            android:textColor="@color/lightBlack" />
                    </TableRow>
...
