...
        android:gravity="center"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/button_reject"
            android:background="@drawable/rounded_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
...
            android:textSize="18sp"
            android:textColor="@color/white"
            android:backgroundTint="@android:color/holo_red_light"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/button_accept"
            android:background="@drawable/rounded_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
...
